include/flowi/arena/arena.h

// @generated by api_gen - DO NOT EDIT. Regenerate with cargo regen.

#pragma once

#include <flowi/fl_api.h>
#include <stdint.h>

#ifdef __cplusplus
extern "C" {
#endif

// Opaque region allocator owned by flowi core. Never crossed by value: every allocation entry point
// takes a `*Arena`, and the toolkit and the app hold it solely behind that pointer.
typedef struct FlArena FlArena;

// A savepoint in an arena, restored in bulk to free everything allocated after it (a temp/scratch
// scope). A POD value type crossed by value through the public ABI; arena points at the saved arena and
// pos is its byte offset at capture.
typedef struct FlTempArena {
    FlArena* arena;
    uint64_t pos;
} FlTempArena;

// The `fl_arena_*` plugin service API - flowi core's bump/region allocator, exported as plain C symbols. Slots take only their own params. Plugins link the shared library and call these symbols directly.
// Direct API - hand-written bodies.
// Initialize flowi's process-wide core services and return the main arena. Idempotent: a
// second call returns the live arena and leaves the running services alone. fl_app_create
// calls this itself, so an app only calls it directly to pick a job_threads count or to
// reach the arena before there is an application.
FL_API FlArena* fl_init(int32_t job_threads);
// Shut flowi's process-wide core services down and release the arenas fl_init reserved:
// the main arena it returned and the calling thread's scratch arenas. Every flowi object
// must already be gone, and the returned arena is dangling afterwards. A no-op when the
// services are already down; a later fl_init brings them back up.
FL_API void fl_destroy(void);
// Reserve a new arena (reserved_size virtual bytes, committed on demand); file/line identify
// the allocation site. Wrapper over arena_new_.
FL_API FlArena* arena_create(uint64_t reserved_size, const char* file, int32_t line);
// Destroy an arena and free all its memory.
FL_API void arena_destroy(FlArena* arena);
// Reset an arena to empty, reusing its memory (per-frame pattern).
FL_API void arena_rewind(FlArena* arena);
// Allocate raw bytes (thread-safe, CAS).
FL_API void* arena_alloc_raw(FlArena* arena, uint64_t size, uint64_t alignment);
// Allocate zero-initialized bytes (thread-safe, CAS).
FL_API void* arena_alloc_raw_zero(FlArena* arena, uint64_t size, uint64_t alignment);
// Allocate raw bytes (single-threaded, no atomics).
FL_API void* arena_alloc_raw_st(FlArena* arena, uint64_t size, uint64_t alignment);
// Allocate zero-initialized bytes (single-threaded, no atomics).
FL_API void* arena_alloc_raw_zero_st(FlArena* arena, uint64_t size, uint64_t alignment);
// Advance the arena position to an alignment boundary without allocating.
FL_API void arena_align(FlArena* arena, uint64_t alignment);
// Current (next) allocation address.
FL_API void* arena_current_pos(FlArena* arena);
// Next aligned allocation address, without advancing.
FL_API void* arena_aligned_pos(FlArena* arena, uint64_t alignment);
// Begin a temporary scope (save the current position).
FL_API FlTempArena arena_temp_begin(FlArena* arena);
// End a temporary scope (restore the saved position).
FL_API void arena_temp_end(FlTempArena temp);
// Acquire a thread-local scratch arena scope.
FL_API FlTempArena arena_scratch_begin(void);
// Acquire a thread-local scratch arena scope that avoids conflict_arena.
FL_API FlTempArena arena_scratch_begin_conflict(const FlArena* conflict_arena);
// End a scratch arena scope.
FL_API void arena_scratch_end(FlTempArena temp);
// Release bytes_to_release bytes from the end of the arena.
FL_API void arena_compact_bytes(FlArena* arena, uint64_t bytes_to_release);
// Count complete element_size-sized elements between start_ptr and the current position.
FL_API uint64_t arena_count_elements(const FlArena* arena, const void* start_ptr, uint64_t element_size);


#ifdef __cplusplus
}
#endif