rust/flowi_core_sys/src/generated/arena.rs

// @generated by api_gen - DO NOT EDIT. Regenerate with cargo regen.

/// Opaque region allocator owned by flowi core. Never crossed by value: every allocation entry point
/// takes a `*Arena`, and the toolkit and the app hold it solely behind that pointer.
pub enum Arena {}

/// A savepoint in an arena, restored in bulk to free everything allocated after it (a temp/scratch
/// scope). A POD value type crossed by value through the public ABI; arena points at the saved arena and
/// pos is its byte offset at capture.
#[repr(C)]
pub struct TempArena {
    pub arena: *mut crate::Arena,
    pub pos: u64,
}

const _: () = {
    assert!(core::mem::size_of::<TempArena>() == 16, "TempArena size drift");
    assert!(core::mem::align_of::<TempArena>() == 8, "TempArena align drift");
    assert!(core::mem::offset_of!(TempArena, arena) == 0, "TempArena.arena offset drift");
    assert!(core::mem::offset_of!(TempArena, pos) == 8, "TempArena.pos offset drift");
};

// The `fl_arena_*` plugin service API - flowi core's bump/region allocator, exported as plain C symbols. Slots take only their own params. Plugins link the shared library and call these symbols directly.
extern "C" {
    /// Initialize flowi's process-wide core services and return the main arena. Idempotent: a
    /// second call returns the live arena and leaves the running services alone. fl_app_create
    /// calls this itself, so an app only calls it directly to pick a job_threads count or to
    /// reach the arena before there is an application.
    pub fn fl_init(job_threads: i32) -> *mut crate::Arena;
    /// Shut flowi's process-wide core services down and release the arenas fl_init reserved:
    /// the main arena it returned and the calling thread's scratch arenas. Every flowi object
    /// must already be gone, and the returned arena is dangling afterwards. A no-op when the
    /// services are already down; a later fl_init brings them back up.
    pub fn fl_destroy();
    /// Reserve a new arena (reserved_size virtual bytes, committed on demand); file/line identify
    /// the allocation site. Wrapper over arena_new_.
    pub fn arena_create(reserved_size: u64, file: *const core::ffi::c_char, line: i32) -> *mut crate::Arena;
    /// Destroy an arena and free all its memory.
    pub fn arena_destroy(arena: *mut crate::Arena);
    /// Reset an arena to empty, reusing its memory (per-frame pattern).
    pub fn arena_rewind(arena: *mut crate::Arena);
    /// Allocate raw bytes (thread-safe, CAS).
    pub fn arena_alloc_raw(arena: *mut crate::Arena, size: u64, alignment: u64) -> *mut core::ffi::c_void;
    /// Allocate zero-initialized bytes (thread-safe, CAS).
    pub fn arena_alloc_raw_zero(arena: *mut crate::Arena, size: u64, alignment: u64) -> *mut core::ffi::c_void;
    /// Allocate raw bytes (single-threaded, no atomics).
    pub fn arena_alloc_raw_st(arena: *mut crate::Arena, size: u64, alignment: u64) -> *mut core::ffi::c_void;
    /// Allocate zero-initialized bytes (single-threaded, no atomics).
    pub fn arena_alloc_raw_zero_st(arena: *mut crate::Arena, size: u64, alignment: u64) -> *mut core::ffi::c_void;
    /// Advance the arena position to an alignment boundary without allocating.
    pub fn arena_align(arena: *mut crate::Arena, alignment: u64);
    /// Current (next) allocation address.
    pub fn arena_current_pos(arena: *mut crate::Arena) -> *mut core::ffi::c_void;
    /// Next aligned allocation address, without advancing.
    pub fn arena_aligned_pos(arena: *mut crate::Arena, alignment: u64) -> *mut core::ffi::c_void;
    /// Begin a temporary scope (save the current position).
    pub fn arena_temp_begin(arena: *mut crate::Arena) -> crate::TempArena;
    /// End a temporary scope (restore the saved position).
    pub fn arena_temp_end(temp: crate::TempArena);
    /// Acquire a thread-local scratch arena scope.
    pub fn arena_scratch_begin() -> crate::TempArena;
    /// Acquire a thread-local scratch arena scope that avoids conflict_arena.
    pub fn arena_scratch_begin_conflict(conflict_arena: *const crate::Arena) -> crate::TempArena;
    /// End a scratch arena scope.
    pub fn arena_scratch_end(temp: crate::TempArena);
    /// Release bytes_to_release bytes from the end of the arena.
    pub fn arena_compact_bytes(arena: *mut crate::Arena, bytes_to_release: u64);
    /// Count complete element_size-sized elements between start_ptr and the current position.
    pub fn arena_count_elements(arena: *const crate::Arena, start_ptr: *const core::ffi::c_void, element_size: u64) -> u64;
}

